fix(portfolio): overflow company experiences text is displayed

--- a/portfolio/styles/CompanyExperience.module.css
+++ b/portfolio/styles/CompanyExperience.module.css
@@ -99,6 +99,6 @@
 @media screen and (max-width: 500px) {
   .company_experiences_item_technologies li {
     padding: 0px 5px;
-    overflow: hidden;
+    /* overflow: hidden; */
   }
 }
